[package]
name = "test-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
# https://lib.rs/crates/sccache
rustc-wrapper = "/workspaces/sccache"

[dependencies]
rocket ={ git = "https://github.com/rwf2/Rocket.git", branch = "v0.5"}
